# graphax

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  comp_graph_examples-0.hdf5  comp_graph_examples-1.hdf5  jax_graph.py  pyproject.toml  setup.cfg  setup.py
docs/: CNAME  conf.py  index copy.rst  index.rst  requirements.txt
docs/_static/: _config.yml
performance_measurements/: perf.py  performance_measurements.py
src/graphax/: __init__.py  checker.py  cleaner.py  core.py  edge_game.py  elimination.py  embedding.py  equinox_bindings.py  game.py  graph.py  perf.py  performance_measurements.py  primitives.py  random_search_solver.py  skeleton.py  transform.py  utils.py  vertex_game.py
src/legacy/: core.py  random_search_solver.py
tests/: _transformer.py  basic_test.py  benchmark_test.py  cifar10_transformer.py  cifar_10_transformer.py  comp_graph_examples-0.hdf5  comp_graph_examples-1.hdf5  conftest.py  connectivity_test.py  core_test.py  custom_derivative_test.py  dense_mul_test.py  edge_game_test.py  eligibility_prop_test.py  embedding_test.py  env_test.py  eqx_test.py  examples_test.py  fancy_test.py  from_jaxpr_test.py  gpt_sampler.py  llm_sampler_test.py  make_dataset_test.py  mixed_mul_test.py  multi_output_primitives_test.py  neuron_models.py  parallel_test.py  pjit_test.py  pre_elimination_test.py  preelimination_test.py  prompt_list.txt  random_test.py  snn_test.py  sparse_mul_test.py  test_skeleton.py  to_jaxpr_test.py  tracing_test.py  transformer_test.py  vertex_game_test.py  vmap_test.py
(+112 files in other folders)
