[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphax"
version = "0.0.1"
dependencies = [
    "numpy",
    "jax>=0.5.0",
    "jaxlib>=0.5.0"
]